// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should match snapShot when there is no suffic Icon 1`] = `
.c1 {
  border: 0;
  outline: none;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background: transparent;
}

.c0 {
  width: 100%;
  border: 1px solid rgba(0,0,0,0.15);
  background-color: white;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5em;
  padding: 0.5em;
}

.c0.c0:focus-within {
  outline: 2px solid blue;
}

<div>
  <div
    class="c0"
  >
    <input
      class="c1"
    />
  </div>
</div>
`;

exports[`Input should match snapShot when there is suffic Icon 1`] = `
.c1 {
  border: 0;
  outline: none;
  padding: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background: transparent;
}

.c0 {
  width: 100%;
  border: 1px solid rgba(0,0,0,0.15);
  background-color: white;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5em;
  padding: 0.5em;
}

.c0.c0:focus-within {
  outline: 2px solid blue;
}

<div>
  <div
    class="c0"
  >
    <input
      class="c1"
    />
    <i
      class="fa-username"
    />
  </div>
</div>
`;
